--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "nodemon --exec 'mocha --recursive -R min'"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mocha": "^5.1.0",
     "mongoose": "^5.0.14",
